fix: add `word-wrap: break-word;` to body

--- a/styles/global.css
+++ b/styles/global.css
@@ -7,6 +7,7 @@ body {
     メイリオ, Meiryo, sans-serif;
   line-height: 1.6;
   font-size: 18px;
+  word-wrap: break-word;
 }
 
 * {
